# ReasonMark

./: README.md  assess_detectability.py  assess_quality.py  cfg.py  generate.py  generate_hf.py  pyproject.toml  requirements.txt  run.py  run_v1.py  visualization.py
config/: OURS.json
dataset/aime_2025/: download.ipynb  train.jsonl
dataset/gsm8k/: download.ipynb
dataset/mmlu_pro/: download.ipynb
dataset/wmt19_zh_en/: download.ipynb  validation.jsonl
evaluation/: dataset.py
evaluation/pipelines/: vllm_detection.py  vllm_quality_analysis.py
evaluation/tools/: success_rate_calculator.py  text_editor.py  text_quality_analyzer.py
experiment/: cs_stat.py  entropy_stat.py  logits_stat.py
scripts/: assess_detectability.sh  assess_quality.sh  generate.sh  generate_hf.sh  visualize.sh
scripts/experiment/: entropy_stat.sh  logits_stat.sh
utils/: transformers_config.py
watermark/: auto_config.py  auto_watermark.py  base.py
watermark/exp/: exp.py
watermark/exp_edit/: exp_edit.py
watermark/exp_gumbel/: exp_gumbel.py
watermark/its_edit/: its_edit.py
watermark/ours/: __init__.py  ours.py
watermark/pf/: pf.py
watermark/utils/: text_filters.py
